edge-hub/thanos/thanos-querier.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: thanos-querier
  labels:
    app: thanos-querier
spec:
  replicas: 1
  selector:
    matchLabels:
      app: thanos-querier
  template:
    metadata:
      labels:
        app: thanos-querier
    spec:
      serviceAccountName: thanos-querier
      containers:
      - name: thanos
        image: quay.io/thanos/thanos:v0.23.1
        args:
        - query
        - --query.replica-label=replica
        - --store=dnssrv+thanos-store-gateway.thanos.svc.cluster.local
        - --store=dns+thanos-receive.thanos.svc.cluster.local:10901
        ports:
        - name: http
          containerPort: 10902
        - name: grpc
          containerPort: 10901
        livenessProbe:
          httpGet:
            path: /-/healthy
            port: http
---
apiVersion: v1
kind: Service
metadata:
  labels:
    app: thanos-querier
  name: thanos-querier
spec:
  ports:
  - port: 10902
    protocol: TCP
    targetPort: http
    name: http
  - port: 9090
    protocol: TCP
    targetPort: http
    name: grafana-access
  selector:
    app: thanos-querier
  type: ClusterIP
