edge-hub/thanos/thanos-querier-http-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: thanos-querier
  annotations:
    kubernetes.io/ingress.class: "nginx"
    nginx.ingress.kubernetes.io/backend-protocol: "HTTP"
spec:
  rules:
    - host: thanos-querier.minikube.cloud
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: thanos-querier
                port:
                  name: http
