edge-hub/thanos/thanos-receive-remote-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: thanos-receive-remote
  annotations:
    kubernetes.io/ingress.class: "nginx"
    nginx.ingress.kubernetes.io/backend-protocol: "HTTP"
spec:
  rules:
    - host: thanos-receive-remote.minikube.cloud
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: thanos-receive
                port:
                  name: remote-write
